--- a/HW0/aquila_sw/uartboot/Makefile
+++ b/HW0/aquila_sw/uartboot/Makefile
@@ -7,12 +7,17 @@
 #
 
 CROSS = riscv32-unknown-elf
-CCPATH = $(RISCV)/bin
+# CCPATH = $(RISCV)/bin
 
-CC = $(CCPATH)/$(CROSS)-gcc
-LD = $(CCPATH)/$(CROSS)-ld
-OC = $(CCPATH)/$(CROSS)-objcopy
-OD = $(CCPATH)/$(CROSS)-objdump
+# CC = $(CCPATH)/$(CROSS)-gcc
+# LD = $(CCPATH)/$(CROSS)-ld
+# OC = $(CCPATH)/$(CROSS)-objcopy
+# OD = $(CCPATH)/$(CROSS)-objdump
+
+CC = $(CROSS)-gcc
+LD = $(CROSS)-ld
+OC = $(CROSS)-objcopy
+OD = $(CROSS)-objdump
 
 CCFLAGS = -Wall -I. -Os -fomit-frame-pointer -march=rv32im -mstrict-align -fno-builtin
 LDFLAGS = -T$(PROJ).ld -Map=$(PROJ).map
@@ -32,8 +37,16 @@ clean:
 %.o: %.c $(PROJ).ld
 	$(CC) $(CCFLAGS) -c $< -o $@
 
+# riscv32-unknown-elf-gcc -Wall -I. -Os -fomit-frame-pointer -march=rv32im -mstrict-align -fno-builtin -c boot.c -o boot.o
+# riscv32-unknown-elf-gcc -Wall -I. -Os -fomit-frame-pointer -march=rv32im -mstrict-align -fno-builtin -c uartboot.c -o uartboot.o
+# riscv32-unknown-elf-gcc -Wall -I. -Os -fomit-frame-pointer -march=rv32im -mstrict-align -fno-builtin -c io_uart.c -o io_uart.o
+
 $(PROJ).out: $(OBJS)
 	$(LD) $(LDFLAGS) $(OBJS) -o $@
+
+# riscv32-unknown-elf-ld -Tbootrom.ld -Map=bootrom.map boot.o uartboot.o io_uart.o -o bootrom.out
+# -Map=bootrom.map: Print a link map to the file mapfile
+#                         ^  TODO: check whether error or not
 
 $(PROJ).bin: $(PROJ).out
 	$(OC) $(OCFLAGS) $< $@
@@ -41,6 +54,13 @@ $(PROJ).bin: $(PROJ).out
 	$(OD) -s $< > $(PROJ).content
 	rm $<
 
+# riscv32-unknown-elf-ld -Tbootrom.ld -Map=bootrom.map boot.o uartboot.o io_uart.o -o bootrom.out
+# riscv32-unknown-elf-objcopy -O binary bootrom.out bootrom.bin
+# riscv32-unknown-elf-objdump -d bootrom.out > bootrom.objdump
+# riscv32-unknown-elf-objdump -s bootrom.out > bootrom.content
+# rm bootrom.out
+
 $(PROJ).mem: $(PROJ).bin
 	./create_mem.sh $<
 
+# ./create_mem.sh bootrom.bin
