add HW1 report and update report.tex

--- a/HW1/Makefile
+++ b/HW1/Makefile
@@ -8,4 +8,4 @@ build: $(report_name)
 	pdflatex $(report_name)
 
 clean:
-	rm report.aux report.fdb* report.fls report.log report.pdf report.sync*
+	rm report.aux report.fdb* report.fls report.log report.sync*
